--- a/homedir/.config/Code/User/settings.json
+++ b/homedir/.config/Code/User/settings.json
@@ -1,5 +1,7 @@
 {
     "workbench.colorTheme": "GitHub Plus",
-    //"editor.wordWrap": "on",
-    "editor.renderWhitespace": "all"
+    "editor.wordWrap": "on",
+    "editor.renderWhitespace": "all",
+    "workbench.settings.editor": "json",
+    "window.restoreWindows": "all"
 }
